# simple-python-miniprojects

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/: calculator_1.py  morse.py  number_parse.py  rot13.py
tests/: test_calculator_1.py  test_morse.py  test_number_parse.py  test_rot13.py
