[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-python-examplers"
description = "Simple programming mini-projects in Python"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
]

[project.optional-dependencies] # Optional
dev = [
  "pytest",
  "black",
  "mypy",
  "build",
  "setuptools"
]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[tool.mypy]
mypy_path = [ "src" ]
files = [ "src", "tests" ]
show_error_codes = true
check_untyped_defs = true
# False positive: slice indices should be integers
disable_error_code = [ "misc" ]
